/*
 * Ouroboros - Copyright (C) 2016 - 2020
 *
 * IPCPd message
 *
 *    Dimitri Staessens <dimitri.staessens@ugent.be>
 *    Sander Vrijders   <sander.vrijders@ugent.be>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., http://www.fsf.org/about/contact/.
 */

syntax = "proto2";

import "ipcp_config.proto";
import "qosspec.proto";

enum ipcp_msg_code {
        IPCP_BOOTSTRAP       =  1;
        IPCP_ENROLL          =  2;
        IPCP_REG             =  3;
        IPCP_UNREG           =  4;
        IPCP_QUERY           =  5;
        IPCP_FLOW_ALLOC      =  6;
        IPCP_FLOW_JOIN       =  7;
        IPCP_FLOW_ALLOC_RESP =  8;
        IPCP_FLOW_DEALLOC    =  9;
        IPCP_CONNECT         = 10;
        IPCP_DISCONNECT      = 11;
        IPCP_REPLY           = 12;
};

message ipcp_msg {
        required ipcp_msg_code code        =  1;
        optional bytes hash                =  2;
        optional int32 flow_id             =  3;
        optional string dst                =  4;
        optional qosspec_msg qosspec       =  5;
        optional bytes pk                  =  6; /* piggyback */
        optional ipcp_config_msg conf      =  7;
        optional int32 pid                 =  8;
        optional layer_info_msg layer_info =  9;
        optional int32 response            = 10;
        optional string comp               = 11;
        optional uint32 timeo_sec          = 12;
        optional int32 result              = 13;
};
