/*
 * Ouroboros - Copyright (C) 2016 - 2024
 *
 * Layer configuration message
 *
 *    Dimitri Staessens <dimitri@ouroboros.rocks>
 *    Sander Vrijders   <sander@ouroboros.rocks>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., http://www.fsf.org/about/contact/.
 */

syntax = "proto2";

import "model.proto";

message dt_config_msg {
        required uint32 addr_size    = 1;
        required uint32 eid_size     = 2;
        required uint32 max_ttl      = 3;
        required uint32 routing_type = 4;
}

message uni_config_msg {
        required dt_config_msg dt      = 1;
        required uint32 addr_auth_type = 2;
        required uint32 cong_avoid     = 3;
}

message eth_config_msg {
        required string dev       = 1;
        required uint32 ethertype = 2;
}

message udp_config_msg {
        required uint32 ip_addr  = 1;
        required uint32 port     = 2;
        required uint32 dns_addr = 3; /* set to 0 if unused */
}

message ipcp_config_msg {
        required layer_info_msg layer_info =  1;
        required uint32 ipcp_type          =  2;
        optional uni_config_msg unicast    =  3;
        optional udp_config_msg udp        =  4;
        optional eth_config_msg eth        =  5;
}
